[gd_scene load_steps=4 format=2]

[ext_resource path="res://screens/gui/preset-view/PresetInfoDisplay.gd" type="Script" id=1]
[ext_resource path="res://screens/gui/elements/InputLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/gui/elements/CheckBoxLabel.tscn" type="PackedScene" id=3]

[node name="PresetInfoDisplay" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1580.0
margin_bottom = 880.0
color = Color( 0.219608, 0.219608, 0.219608, 0.662745 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1580.0
margin_bottom = 880.0
mouse_filter = 1
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1575.0
margin_bottom = 875.0

[node name="ScreenshotDisplay" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 1570.0

[node name="PresetName" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 4.0
margin_right = 1570.0
margin_bottom = 38.0

[node name="PresetDescription" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 42.0
margin_right = 1570.0
margin_bottom = 76.0

[node name="PresetHotkey" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 80.0
margin_right = 1570.0
margin_bottom = 114.0

[node name="PresetNotes" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 118.0
margin_right = 1570.0
margin_bottom = 152.0

[node name="PresetSetAsDefault" parent="MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 156.0
margin_right = 1570.0
margin_bottom = 190.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 850.0
margin_right = 1570.0
margin_bottom = 870.0
size_flags_vertical = 10

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 783.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save Preset"

[node name="LoadButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 787.0
margin_right = 1570.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Load Preset"
